# TextAdventure

./: .gitignore  CMakeLists.txt  README.md
include/: util.h
include/characters/: living_entity.h  livingentity.h  player.h
include/combat/weapons/: material.h  sword.h
include/environment/: material.h
src/: main.cpp  util.cpp
src/characters/: humanoid.cpp  living_entity.cpp  player.cpp
src/environment/: material.cpp  material.h
